[package]
name = "ecm"
version = "0.1.0"
authors = ["jco"]
edition = "2018"

[dependencies.rug]
version = "1.12"
default-features = false
features = ["integer", "rand"]

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.log]
version = "0.4"

[dependencies.simple_logger]
version = "1.11.0"

[dependencies.hwloc]
version = "0.5.0"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "ecm_benchmark"
harness = false